# vehicle-pricing

./: pyproject.toml
data/: EUDS_CaseStudy_Pricing.csv
model/: scaler.pkl  xgboost.pkl
