[project]
name = "case-pricing"
version = "0.1.0"
description = "A machine learning project for vehicle pricing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "pandas>=2.3.2, < 3.0.0",
    "scikit-learn>=1.7.2, < 2.0.0",
    "xgboost>=3.0.5",
    "numpy>=2.0, <2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.5,<=3.10",
    "nbformat>=5.10.4",
    "plotly>=6.3.1",
    "poethepoet>=0.37.0",
    "setuptools>=80.9.0",
    "ydata-profiling>=4.16.1",
]

[tool.poe.tasks]
kernel = "python -m ipykernel install --user --name=case-pricing --display-name 'Python (case-pricing)'"
